@startuml
'https://plantuml.com/sequence-diagram

class User{
String username
String password
TranslationHistory translationHistory
}

class Translation{
translate(User user, String phrase, String languageOut)
translate(User user, String phrase, String languageOut, String languageIn)
}

class TranslationHistory{
}

class Composer{
String phraseOriginal
String phraseTranslated
String language
Date timestamp
}
User <-- Translation
User o-- TranslationHistory
TranslationHistory o-- Composer


@enduml